# fibonacci

./: Cargo.toml  docker-compose.yml  otel-collector-config.yml  prometheus.yml
client/: fibonacci_client.py  requirements.txt
src/: config.rs  main.rs  service.rs
