[package]
name = "fibonacci"
version = "0.1.0"
authors = ["Julio Daniel Reyes <nemesiscodex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
env_logger = "0.8.2"
log = "0.4.11"
serde = "1.0.118"
