[package]
name = "fibonacci"
version = "0.1.0"
authors = ["Julio Daniel Reyes <nemesiscodex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.118"
tracing = "0.1.22"
tracing-actix-web = "0.2.1"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"
