[package]
name = "fibonacci"
version = "0.1.0"
authors = ["Julio Daniel Reyes <nemesiscodex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-web-opentelemetry = { version = "0.9.0", features = ["metrics"] }
futures = "0.3.9"
opentelemetry = { version = "0.11.2", features = ["trace", "metrics"] }
opentelemetry-otlp = "0.4.0"
opentelemetry-prometheus = "0.4.0"
serde = "1.0.118"
tracing = "0.1.22"
tracing-bunyan-formatter = "0.1.7"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-opentelemetry = "0.10.0"
tracing-subscriber = "0.2.15"
uuid = { version = "0.8.1", features = ["v4"] }
